--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,16 @@ services:
       - .env
     volumes:
       - 'postgres:/var/lib/postgresql/data'
+  backend:
+    build: .
+    depends_on:
+      - postgres
+    env_file:
+      - .env
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./backend:/usr/src/app
 
 volumes:
   postgres:
