--- a/package.json
+++ b/package.json
@@ -12,19 +12,29 @@
   "author": "Udacity",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
+    "bcrypt": "^6.0.0",
     "body-parser": "^1.19.0",
-    "typescript": "^4.1.3",
-    "pg": "^8.5.1"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^4.22.1",
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9",
-    "@types/jasmine": "^3.6.3",
+    "@types/express": "^4.17.25",
+    "@types/jasmine": "^3.10.18",
+    "@types/node": "^24.10.1",
     "@types/pg": "^7.14.7",
-    "jasmine": "^3.6.4",
+    "@types/supertest": "^6.0.3",
+    "eslint": "^9.39.1",
+    "jasmine": "^3.99.0",
     "jasmine-spec-reporter": "^6.0.0",
     "jasmine-ts": "^0.3.0",
+    "nodemon": "^3.1.11",
+    "prettier": "^3.7.4",
+    "supertest": "^7.1.4",
     "ts-node": "^9.1.1",
-    "tsc-watch": "^4.2.9"
+    "tsc-watch": "^4.2.9",
+    "typescript": "^5.9.3"
   }
 }
